# pinser

./: .gitignore  CLAUDE.md  HACKING.md  HUMANS.txt  README.md  VIBE  pyproject.toml
docs/: implementation-stack-decision.md  project-roadmap.md  threat-model.md  tools-security-assessment.md  ui-design-contract.md
docs/architecture/: INDEX.md  agent-resume-and-sidechains.md  agent-steering-and-work-coordination.md  bash-and-powershell-safety.md  conversation-recovery-state-machine.md  feature-prioritization.md  hld.md  implementation-notes-and-gotchas.md  interfaces-and-endpoints.md  message-normalization-for-api.md  model-and-request-shaping.md  model-selection-and-routing.md  path-and-filesystem-safety.md  permission-engine.md  remote-api.md  remote-bridge-session-lifecycle.md  session-compaction-and-recovery.md  task-and-swarm.md  tool-contracts.md  tool-input-streaming-and-partial-assembly.md  tool-result-budgeting-and-dedup.md  transcript-and-persistence-semantics.md  turn-failure-and-retry-state-machine.md
docs/phase2/: TODO.md  cli-output-expectations.md  omitted-functionality.md  (+2 more)
docs/phase2.1/: TODO.md  scope.md
tests/: support_models.py  test_bash_tool.py  test_cli.py  test_edit_tool.py  test_file_state.py  test_glob_tool.py  test_grep_tool.py  test_prompt_injection_guards.py  test_read_tool.py  test_remote_mode_opt_in.py  test_runtime_phase2_scaffolding.py  test_safety.py  test_secret_redaction.py  test_session_tools.py  test_settings.py  test_tool_result_messages.py  test_transcript_normalization.py  test_worker_permissions.py  test_write_tool.py
(+39 files in other folders)
