[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pinser"
version = "0.1.0"
description = "A free-software alternative for Claude Code-style workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "COPYING" }
authors = [
  { name = "Pinser contributors" },
]
dependencies = [
  "pydantic>=2.11,<3",
  "typer>=0.16,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.11,<1",
]

[project.scripts]
pinser = "pinser.app.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pinser"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src"]
packages = ["pinser"]
warn_unused_configs = true
